--- a/app/views/meetings/_meetings.html.erb
+++ b/app/views/meetings/_meetings.html.erb
@@ -5,6 +5,7 @@
   <% unless committee %>
     <th>Committee</th>
   <% end %>
+    <th>Period</th>
     <th>Starts at</th>
     <th>Ends at</th>
     <th>Location</th>
