All specs pass again.  Partially implement overhaul of memberships controller and tests.

--- a/app/views/memberships/_membership.html.erb
+++ b/app/views/memberships/_membership.html.erb
@@ -1,4 +1,4 @@
-  <%= table_row_tag do %>
+  <%= table_row_tag true, false, { id: "membership-#{membership.id}" } do %>
     <% unless user -%>
     <td><%= membership.user ? membership.user : raw("<i>unassigned</i>") %></td>
     <% end -%>
