--- a/app/views/memberships/_memberships.html.erb
+++ b/app/views/memberships/_memberships.html.erb
@@ -2,7 +2,7 @@
 <% committee ||= false %>
 <% position ||= false %>
 <% request ||= false %>
-<table>
+<table id="memberships">
   <thead>
   <tr>
     <% unless user %>
