--- a/app/views/memberships/show.html.erb
+++ b/app/views/memberships/show.html.erb
@@ -1,4 +1,6 @@
+<div id="membership-<%= @membership.id %>">
 <%=render partial: 'memberships/detail', locals: { membership: @membership } %>
+</div> <!-- #membership-<%= @membership.id %> -->
 
 <% if @membership.request %>
 <p>
