--- a/app/views/positions/show.html.erb
+++ b/app/views/positions/show.html.erb
@@ -28,6 +28,10 @@
 </p>
 
 <p>
+  <b>Minimum slots:</b> <%= @position.minimum_slots %>
+</p>
+
+<p>
   <b>Statuses:</b>
   <% if @position.statuses.empty? %>
   <i>No status restrictions.</i>
