--- a/app/views/memberships/decline_renewal.html.erb
+++ b/app/views/memberships/decline_renewal.html.erb
@@ -7,7 +7,8 @@ Use this form to decline renewal of the membership described below.
 <%= render partial: 'memberships/detail', locals: { membership: @membership } %>
 
 <%= semantic_form_for(@membership, as: :membership,
-  url: do_decline_renewal_membership_path( @membership ), method: :put ) do |form| %>
+  url: decline_renewal_membership_path( @membership ), method: :post ) do |form| %>
+  <%= render "shared/error_messages", target: form.object %>
   <%= form.inputs do %>
   <%= form.input :decline_comment, label: 'Comment',
     hint: 'Include a brief explanation for why renewal is being declined.' %>
