--- a/app/views/memberships/decline.html.erb
+++ b/app/views/memberships/decline.html.erb
@@ -1,4 +1,4 @@
-<h2>Decline renewal</h2>
+<h2>Decline</h2>
 
 <p>
 Use this form to decline renewal of the membership described below.
@@ -7,7 +7,7 @@ Use this form to decline renewal of the membership described below.
 <%= render partial: 'memberships/detail', locals: { membership: @membership } %>
 
 <%= semantic_form_for(@membership, as: :membership,
-  url: decline_renewal_membership_path( @membership ), method: :post ) do |form| %>
+  url: decline_membership_path( @membership ), method: :put ) do |form| %>
   <%= render "shared/error_messages", target: form.object %>
   <%= form.inputs do %>
   <%= form.input :decline_comment, label: 'Comment',
