--- a/app/views/memberships/_form.html.erb
+++ b/app/views/memberships/_form.html.erb
@@ -1,17 +1,17 @@
-  <%= render "shared/error_messages", :target => form.object %>
+  <%= render "shared/error_messages", target: form.object %>
   <%= form.inputs do %>
-  <%= form.input :user_name, :as => :autocomplete, :label => 'User', :url => users_path( :format => :json ) %>
-  <%= form.input :period, :collection => form.object.position.schedule.periods %>
-  <%= form.input :starts_at, :as => :date_picker %>
-  <%= form.input :ends_at, :as => :date_picker %>
+  <%= form.input :user_name, as: :autocomplete, label: 'User', url: users_path( format: :json ) %>
+  <%= form.input :period, collection: form.object.position.schedule.periods %>
+  <%= form.input :starts_at, as: :date_picker %>
+  <%= form.input :ends_at, as: :date_picker %>
     <% form.object.designees.each do |designee| %>
       <%= form.semantic_fields_for :designees, designee do |designee_form| %>
         <%= designee_form.inputs do %>
-          <%= designee_form.input :committee_id, :as => :hidden %>
-          <%= designee_form.input :user_name, :as => :autocomplete,
-            :label => "Designee for #{designee_form.object.committee.name}",
-            :url => users_path( :format => :json ) %>
-          <%= designee_form.input :_destroy, :label => "Check to remove this designee", :as => :boolean %>
+          <%= designee_form.input :committee_id, as: :hidden %>
+          <%= designee_form.input :user_name, as: :autocomplete,
+            label: "Designee for #{designee_form.object.committee.name}",
+            url: users_path( format: :json ) %>
+          <%= designee_form.input :_destroy, label: "Check to remove this designee", as: :boolean %>
         <% end %>
       <% end %>
     <% end %>
