--- a/app/views/memberships/renew.html.erb
+++ b/app/views/memberships/renew.html.erb
@@ -8,8 +8,8 @@
  end date to which you are interested to be reappointed to at this time.
 </p>
 
-<%= form_for @user, :url => renew_user_memberships_path(@user) do |form| %>
-<%= render 'shared/error_messages', :target => form.object %>
+<%= form_for @user, url: renew_user_memberships_path(@user) do |form| %>
+<%= render 'shared/error_messages', target: form.object %>
 <table>
 <thead>
   <tr>
@@ -21,12 +21,12 @@
 <tbody>
   <%= form.fields_for :memberships, @user.memberships.renewal_candidate do |subform| %>
 
-    <%= table_row_tag( subform.object.errors.empty? ) do %>
+    <%= table_row_tag( subform.object.errors.empty?, false, { id: "membership-#{subform.object.id}" } ) do %>
       <% subform.object.renewal_confirmed_at = Time.zone.now %>
       <%= subform.hidden_field :renewal_confirmed_at %>
       <td><%= subform.label :renew_until, subform.object.position.to_s %></td>
       <td><%= subform.object.ends_at.to_formatted_s :rfc822 %></td>
-      <td><%= subform.text_field :renew_until, :value => subform.object.renew_until.try( :to_formatted_s, :rfc822 ), :class => 'ui-date-picker' %></td>
+      <td><%= subform.text_field :renew_until, value: subform.object.renew_until.try( :to_formatted_s, :rfc822 ), class: 'ui-date-picker' %></td>
     <% end %>
 
     <% if subform.object.errors.any? %>
@@ -42,8 +42,8 @@
 <p>
   <%= form.label :renewal_checkpoint, 'Notify again?' %>
   <%= form.select :renewal_checkpoint,
-        [ [ 'Yes', form.object.renewal_checkpoint.try(:to_s, :db) ],
-          [ 'No', Time.zone.now.to_s( :db )] ] %><br/>
+        [ [ 'Yes', form.object.renewal_checkpoint.try(:to_s, :rfc822) ],
+          [ 'No', Time.zone.now.to_s( :rfc822 )] ] %><br/>
   Yes means you want to continue receiving notices about these renewal preferences.
   No means you will not receive additional notices regarding these preferences.
 </p>
