Refector requests model membership_requests. Implement basic authorization tests using new cucumber style.

--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -3,8 +3,8 @@
     <%= form.text_field :question %>
   </p>
   <p>
-    <%= form.label :request %><br />
-    <%= form.text_field :request %>
+    <%= form.label :membership_request %><br />
+    <%= form.text_field :membership_request %>
   </p>
   <p>
     <%= form.label :content %><br />
