--- a/app/views/enrollments/_enrollments.html.erb
+++ b/app/views/enrollments/_enrollments.html.erb
@@ -12,7 +12,7 @@
   <% end %>
     <th>Title</th>
     <th>Votes</th>
-    <th>Requestable?</th>
+    <th>MembershipRequestable?</th>
     <th>Membership notices?</th>
     <th>Manager?</th>
   </tr>
