--- a/app/views/memberships/edit.html.erb
+++ b/app/views/memberships/edit.html.erb
@@ -13,7 +13,7 @@
 <div id="new_candidates">
 <h3>Other applicants</h3>
 
-<%= render partial: 'candidates', object: @membership.requests.interested %>
+<%= render partial: 'candidates', object: @membership.membership_requests.interested %>
 </div>
 
 <div id="declined_renewal_candidates">
