--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -6,7 +6,7 @@
   <%= form.input :content,
     hint: 'What is the text of the question?' %>
   <%= form.input :global, as: :radio, label: 'Global?',
-    hint: "Should the answer default to what has been given to the same question in other requests?" %>
+    hint: "Should the answer default to what has been given to the same question in other membership_requests?" %>
   <% end %>
   <%= form.input :quizzes, as: :check_boxes,
     hint: 'In which quizzes should this question appear?' %>
