--- a/app/views/enrollments/_enrollment_fields.html.erb
+++ b/app/views/enrollments/_enrollment_fields.html.erb
@@ -21,7 +21,7 @@
     hint: 'What title does the member hold in the committee?' %>
   <%= f.input :votes,
     hint: 'How many votes does the member control in the committee? 0 if non-voting.' %>
-  <%= f.input :requestable, as: :radio, label: "Requestable?",
+  <%= f.input :requestable, as: :radio, label: "MembershipRequestable?",
     hint: 'Can this committee and position be accessed through the application process?' %>
   <%= f.input :membership_notices, as: :radio, label: "Membership notices?",
     hint: 'Should enrolled user be copied on notices regarding membership changes?' %>
