--- a/app/views/membership_requests/_form.html.erb
+++ b/app/views/membership_requests/_form.html.erb
@@ -8,7 +8,7 @@
     <%= form.input :ends_at, :as => :date_picker, :label => 'Desired End Date',
       :hint => 'When is the latest date you are interested in serving?' %>
     <%= form.input :new_position, :as => :select, :collection => form.object.new_position_options, :label => 'Move to',
-      :hint => 'Select the position among your unexpired requests that reflects '+
+      :hint => 'Select the position among your unexpired membership_requests that reflects '+
       'your level of preference for this committee or position.' %>
     <% form.object.answers.each do |answer| %>
       <% if form.object.new_record? || form.object.questions.include?( answer.question ) %>
@@ -20,7 +20,7 @@
     <% end %>
     <%= form.semantic_fields_for :user do |subform| %>
       <%= subform.input :resume, :as => :file,
-        :hint => 'You may optionally provide a resume (pdf only). This resume will appear in all your membership requests.' %>
+        :hint => 'You may optionally provide a resume (pdf only). This resume will appear in all your membership membership_requests.' %>
     <% end %>
   <% end %>
   <%= form.actions %>
