--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -82,9 +82,9 @@
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <% end -%>
 <%= nested_index @user, 'memberships', %w( past current future renewed unrenewed ) %> |
-<%= nested_index @user, 'requests', %w( expired unexpired ) %> |
+<%= nested_index @user, 'membership_requests', %w( expired unexpired ) %> |
 <%= nested_index @user, 'enrollments' %> |
-<%= link_to 'Requestable committees', requestable_user_committees_path(@user) %> |
+<%= link_to 'MembershipRequestable committees', requestable_user_committees_path(@user) %> |
 <%= link_to 'Tent card (pdf)', tent_user_path(@user, :format => :pdf) %> |
 <%= link_to 'Back', users_path %>
 </p>
