--- a/app/views/membership_requests/_membership_requests.html.erb
+++ b/app/views/membership_requests/_membership_requests.html.erb
@@ -1,5 +1,5 @@
 <% user ||= false; committee ||= false %>
-<table id="membership_requests">
+<table id="membership-requests">
   <thead>
   <tr>
     <% unless user %>
