--- a/app/views/committees/index.html.erb
+++ b/app/views/committees/index.html.erb
@@ -1,6 +1,6 @@
 <h2><%= params[:action].titleize %> committees<%= @user ? " for #{h(@user)}" : "" %></h2>
 
-<%= form_for @q, :url => membership_request.fullpath, :method => :get do |form| %>
+<%= form_for @q, :url => request.fullpath, :method => :get do |form| %>
 <p>
   <%= form.label :name_cont, 'Name' %>
   <%= form.text_field :name_cont %>
