--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,6 +1,6 @@
 <h2>Listing questions<%=h " for #{@quiz}" if @quiz %></h2>
 
-<%= form_for @q, url: membership_request.fullpath, method: :get do |form| %>
+<%= form_for @q, url: request.fullpath, method: :get do |form| %>
 <p>
   <%= form.label :name_cont, 'Name' %>
   <%= form.text_field :name_cont %>
