Move request mailer cucumber to spec.

--- a/app/views/membership_request_mailer/close_notice.html.erb
+++ b/app/views/membership_request_mailer/close_notice.html.erb
@@ -13,7 +13,7 @@ You have been appointed to the following <%=
 </p>
 
 <ul>
-<%= render :partial => 'membership', :collection => @membership_request.memberships %>
+<%= render partial: 'membership', collection: @membership_request.memberships %>
 </ul>
 <% else %>
 <p>
