--- a/app/views/membership_request_mailer/_membership.html.erb
+++ b/app/views/membership_request_mailer/_membership.html.erb
@@ -1,6 +1,6 @@
 <% if membership.enrollments.any? %>
-<%= render :partial => 'enrollment', :collection => membership.enrollments,
-  :locals => { :membership => membership } %>
+<%= render partial: 'enrollment', collection: membership.enrollments,
+  locals: { membership: membership } %>
 <% else %>
 <li><%= membership.position %> for a term beginning <%= membership.starts_at.to_s :us_ordinal %> and ending <%= membership.ends_at.to_s :us_ordinal %></li>
 <% end %>
