--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -78,17 +78,16 @@ You may not start motions for any committee at this time.
 <h3>Your Requests for Membership</h3>
 
 <p>
-You have <%= link_to pluralize( current_user.membership_requests.unexpired.length, 'current membership request' ), unexpired_user_membership_requests_path( current_user ) %> and <%= link_to pluralize( current_user.membership_requests.expired.size, 'expired membership request' ), expired_user_membership_requests_path( current_user ) %>.
+You have <%= link_to pluralize( current_user.membership_requests.unexpired.count, 'current membership request' ), unexpired_user_membership_requests_path( current_user ) %> and <%= link_to pluralize( current_user.membership_requests.expired.count, 'expired membership request' ), expired_user_membership_requests_path( current_user ) %>.
 </p>
 
 <p>
-You may browse <%= link_to pluralize( current_user.committees.requestable.count("committees.id", :distinct => true), 'committee' ), requestable_user_committees_path( current_user ) %> for which you are eligible to request membership.
+You may browse <%= link_to pluralize( current_user.committees.requestable.count("committees.id", distinct: true), 'committee' ), requestable_user_committees_path( current_user ) %> for which you are eligible to request membership.
 </p>
 
-<% if current_user.membership_requests.unexpired.length > 0 %>
-<h4>Current MembershipRequests</h4>
-<%= render :partial => 'membership_requests/membership_requests', :object => current_user.membership_requests.unexpired,
-  :locals => { :user => current_user } %>
-<% end %>
+<h4>Active Requests</h4>
+<%= render partial: 'membership_requests/membership_requests',
+  object: current_user.membership_requests.active.unexpired,
+  locals: { user: current_user } %>
 </div> <!-- #membership_requests -->
 
