Provide systematic way to manipulateevent logging on motions.

--- a/app/views/motions/edit.html.erb
+++ b/app/views/motions/edit.html.erb
@@ -1,7 +1,7 @@
 <h2>Editing motion for <%=h @motion.committee %></h2>
 
 <%= semantic_form_for(@motion) do |f| %>
-  <%= render :partial => 'form', :object => f %>
+  <%= render partial: 'form', object: f %>
 <% end %>
 
 <p>
