--- a/app/views/motions/amend.html.erb
+++ b/app/views/motions/amend.html.erb
@@ -9,6 +9,7 @@ An amendment must have sponsors.
 <%= semantic_form_for @amendment, as: :amendment,
   url: amend_motion_path( @motion ), method: :put do |form| %>
   <%= render "shared/error_messages", target: form.object %>
+  <%= render partial: 'motions/event_fields', object: form %>
   <%= form.input :name, label: 'Name',
     hint: 'What should be the new name of the amendment? (Usually best to use the default)' %>
   <%= form.input :description, hint: 'Briefly describe amended purpose and effect of motion' %>
