--- a/app/views/motions/divide.html.erb
+++ b/app/views/motions/divide.html.erb
@@ -1,34 +1,36 @@
-<p>
+<%= content_tag :p do %>
 Use this form to divide a motion into several <em>dividing motions</em>.
 These motions will be considered in the same committee in which this motion is proposed.
-</p>
+<% end %>
 
-<h3>Motion to be divided</h3>
+<%= content_tag :h3, 'Motion to be divided' %>
 
 <%= render partial: 'motions/detail', locals: { motion: @motion } %>
 
-<h3>Dividing motions</h3>
+<%= content_tag :h3, 'Dividing motions' %>
 
-<div id="referred_motions">
+<%= content_tag :div, id: "referred_motions" do %>
   <%= semantic_form_for @motion, url: divide_motion_path( @motion ),
     method: :put do |form| %>
-      <%=render partial: 'motions/event_form', object: form %>
+      <%= form.inputs do %>
+        <%= render partial: 'motions/event_fields', object: form %>
+      <% end %>
       <%= form.inputs for: :referred_motions, name: 'dividing motion' do |subform| %>
         <%=render "shared/error_messages", target: subform.object %>
         <%=render partial: 'motions/referred_motion_fields',
           locals: { role: :divider, committee: @motion.committee, f: subform } %>
       <% end %>
 
-      <div class='links'>
-        <p>
+      <%= content_tag :div, class: 'links' do %>
+        <%= content_tag :p %>
           <%= link_to_add_association 'add dividing motion', form, :referred_motions,
             render_options: { locals: { role: :divider, committee: @motion.committee } } %>
-        </p>
-      </div>
+        <% end %>
+      <% end %> <!-- .links -->
 
     <%= form.actions do %>
     <%= form.action :submit, label: 'Divide' %>
     <% end %>
   <% end %>
-</div>
+<% end %> <!-- #referred_motions -->
 
