--- a/app/views/motions/refer.html.erb
+++ b/app/views/motions/refer.html.erb
@@ -1,16 +1,23 @@
-<p>
-Use this form to refer this motion to another committee.
-This will create a <em>referred motion</em> in the other committee that can
-then work through that committee's normal business process.
-</p>
+<%= content_tag :p do %>
+  Use this form to refer this motion to another committee.
+  This will create a <em>referred motion</em> in the other committee that can
+  then work through that committee's normal business process.
+<% end %>
 
 <%= semantic_form_for @referred_motion, as: :referred_motion,
   url: refer_motion_path( @motion ), method: :put do |form| %>
   <%= render "shared/error_messages", target: form.object %>
-  <%= form.input :committee_name, label: 'Committee',
-    hint: 'To which committee should this motion be referred?' %>
-  <%= form.input :name, label: 'Name',
-    hint: 'What should be the new name of the motion?' %>
+
+  <%= form.inputs do %>
+    <%= form.input :committee_name, label: 'Committee',
+      hint: 'To which committee should this motion be referred?' %>
+    <%= form.input :name, label: 'Name',
+      hint: 'What should be the new name of the motion?' %>
+  <% end %>
+
+  <%= form.inputs for: :referring_motion do |referring_motion_form| %>
+    <%= render partial: 'motions/event_fields', object: referring_motion_form %>
+  <% end %>
 
   <%= form.actions do %>
     <%= form.action :submit, label: 'Refer' %>
