--- a/app/views/motions/refer.html.erb
+++ b/app/views/motions/refer.html.erb
@@ -8,15 +8,13 @@
   url: refer_motion_path( @motion ), method: :put do |form| %>
   <%= render "shared/error_messages", target: form.object %>
 
+  <%= render partial: 'motions/event_fields', object: form %>
+
   <%= form.inputs do %>
     <%= form.input :committee_name, label: 'Committee',
       hint: 'To which committee should this motion be referred?' %>
     <%= form.input :name, label: 'Name',
       hint: 'What should be the new name of the motion?' %>
-  <% end %>
-
-  <%= form.inputs for: :referring_motion do |referring_motion_form| %>
-    <%= render partial: 'motions/event_fields', object: referring_motion_form %>
   <% end %>
 
   <%= form.actions do %>
